@@ -14,11 +14,7 @@ class RegisterPage {
   public static int evoke() throws Exception {
     Stage window = new Stage();
     FXMLLoader fl = new FXMLLoader();
-    if(System.getProperty("os.name").equals("Linux")) {
-      fl.setLocation(new URL("file:///home/kaustubh/Documents/Java/SensorSystem/login.fxml"));
-    } else {
-      fl.setLocation(new URL("file:///C:/register.fxml"));
-    }
+    fl.setLocation(new File("register.fxml").toURI().toURL());
     GridPane gp = fl.<GridPane>load();
 
     // window.setScene(gp, 800, 600);
